@@ -1,21 +1,13 @@
 /**
- * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
- *
- * This library is free software; you can redistribute it and/or modify it under
- * the terms of the GNU Lesser General Public License as published by the Free
- * Software Foundation; either version 2.1 of the License, or (at your option)
- * any later version.
- *
- * This library is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
- * details.
+ * SPDX-FileCopyrightText: (c) 2000 Liferay, Inc. https://liferay.com
+ * SPDX-License-Identifier: LGPL-2.1-or-later OR LicenseRef-Liferay-DXP-EULA-2.0.0-2023-06
  */
 
 package com.liferay.gradle.plugins.service.builder;
 
 import com.liferay.gradle.plugins.service.builder.internal.util.GradleUtil;
 import com.liferay.gradle.util.FileUtil;
+import com.liferay.gradle.util.OSGiUtil;
 
 import java.io.File;
 
@@ -24,16 +16,16 @@ import java.util.Set;
 import java.util.concurrent.Callable;
 
 import org.gradle.api.Action;
+import org.gradle.api.JavaVersion;
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
 import org.gradle.api.Task;
 import org.gradle.api.artifacts.Configuration;
 import org.gradle.api.file.SourceDirectorySet;
 import org.gradle.api.internal.GradleInternal;
-import org.gradle.api.internal.plugins.osgi.OsgiHelper;
 import org.gradle.api.internal.project.ProjectInternal;
 import org.gradle.api.plugins.BasePlugin;
-import org.gradle.api.plugins.JavaPlugin;
+import org.gradle.api.plugins.JavaLibraryPlugin;
 import org.gradle.api.plugins.PluginContainer;
 import org.gradle.api.plugins.WarPlugin;
 import org.gradle.api.plugins.WarPluginConvention;
@@ -53,7 +45,7 @@ public class ServiceBuilderPlugin implements Plugin<Project> {
 
 	@Override
 	public void apply(Project project) {
-		GradleUtil.applyPlugin(project, JavaPlugin.class);
+		GradleUtil.applyPlugin(project, JavaLibraryPlugin.class);
 
 		Configuration serviceBuilderConfiguration =
 			addConfigurationServiceBuilder(project);
@@ -145,10 +137,9 @@ public class ServiceBuilderPlugin implements Plugin<Project> {
 
 				@Override
 				public File call() throws Exception {
-					File resourcesDir = getResourcesDir(project);
-
 					return new File(
-						resourcesDir, "META-INF/portlet-model-hints.xml");
+						getResourcesDir(project),
+						"META-INF/portlet-model-hints.xml");
 				}
 
 			});
@@ -174,7 +165,7 @@ public class ServiceBuilderPlugin implements Plugin<Project> {
 				public String call() throws Exception {
 					if (buildServiceTask.isOsgiModule()) {
 						String bundleSymbolicName =
-							_osgiHelper.getBundleSymbolicName(project);
+							OSGiUtil.getBundleSymbolicName(project);
 
 						return bundleSymbolicName + ".util.ServiceProps";
 					}
@@ -217,9 +208,7 @@ public class ServiceBuilderPlugin implements Plugin<Project> {
 
 				@Override
 				public File call() throws Exception {
-					File resourcesDir = getResourcesDir(project);
-
-					return new File(resourcesDir, "META-INF/sql");
+					return new File(getResourcesDir(project), "META-INF/sql");
 				}
 
 			});
@@ -243,6 +232,26 @@ public class ServiceBuilderPlugin implements Plugin<Project> {
 	@SuppressWarnings("rawtypes")
 	protected void configureTaskBuildService(
 		final BuildServiceTask buildServiceTask) {
+
+		JavaVersion javaVersion = buildServiceTask.getJavaVersion();
+
+		if (javaVersion.isJava11Compatible()) {
+			buildServiceTask.jvmArgs(
+				"--add-opens", "java.base/java.lang=ALL-UNNAMED");
+			buildServiceTask.jvmArgs(
+				"--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED");
+			buildServiceTask.jvmArgs(
+				"--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED");
+			buildServiceTask.jvmArgs(
+				"--add-opens", "java.base/java.net=ALL-UNNAMED");
+			buildServiceTask.jvmArgs(
+				"--add-opens",
+				"java.base/sun.net.www.protocol.http=ALL-UNNAMED");
+			buildServiceTask.jvmArgs(
+				"--add-opens", "java.base/sun.util.calendar=ALL-UNNAMED");
+			buildServiceTask.jvmArgs(
+				"--add-opens", "jdk.zipfs/jdk.nio.zipfs=ALL-UNNAMED");
+		}
 
 		Project project = buildServiceTask.getProject();
 
@@ -413,7 +422,5 @@ public class ServiceBuilderPlugin implements Plugin<Project> {
 
 		return warPluginConvention.getWebAppDir();
 	}
-
-	private static final OsgiHelper _osgiHelper = new OsgiHelper();
 
 }
